no display of the input at first

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Buy New Robes</li>
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Visit Hagrid</li>
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Talk to Hermione</li>
+            <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Feed Hedwig</li>
         </ul>
     </div>
     <script src="assets/js/script.js"></script>
