--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="container">
         <h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i></h1>
-        <input type="text" placeholder="Add New Todo">
+        <input type="text" placeholder="Add New Todo (Then press enter)">
         <ul>
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Go To Potions Class</li>
             <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Buy New Robes</li>
